# gradio-examples

./: 01_basic_image_classifier.py  02_advanced_classifier.py  README.md  pyproject.toml  test_classifier.py
chat_demo/: app.py
chat_demo/.gradio/cached_examples/11/: log.csv
depth_demo/: app.py  download_weights.sh  requirements.txt
depth_demo/checkpoints/: .gitignore
object_detection_demo/: app.py  requirements.txt
