[project]
name = "emlo4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio-client>=1.4.2",
    "gradio>=5.5.0",
    "timm>=1.0.11",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "transformers>=4.46.2",
    "accelerate>=1.1.1",
    "scipy>=1.14.1",
]
